<resources>
    <string name="app_name">AndroidCourseDebug</string>
    <string name="title_activity_login">LoginActivity</string>


    <!-- Login Activity -->
    <string name="edit_login_hint">Insert login...</string>
    <string name="edit_pass_hint">Insert password...</string>
    <string name="enter">Login!</string>
    <string name="login_problem">Login error: check your input!</string>
    <string name="google_login_problem">Login error: check google account!</string>
    <string name="google_signin_intent_failed">Google signin intent failed! Check your connection.</string>
    <string name="google_signin_cancelled">Google signin cancelled!</string>
    <string name="google_signin_failed">Google signin failed!</string>
    <string name="google_signin_unknown_error">Google signin error!</string>
    <string name="firebase_signin_failed">Firebase signin failed! Check your connection.</string>
    <string name="firebase_user_notfound">Firebase user not found.</string>

    <!-- Menu -->
    <string name="menu_dialogs">Dialogs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Settings -->
    <string name="settings_fragment_text">Settings fragment (blank)</string>

    <!-- Dialog list -->
    <string name="dialogs_list_add">Add new dialog</string>
    <string name="dialog_progress_title">Loading... </string>
    <string name="dialog_progress_message">...list of dialogs</string>
    <string name="dialog_toast_id">Dialog id (DB) = </string>
    <string name="dialog_fb_toast_id">Dialog id (FB) = </string>

    <!-- Dialog Add Activity -->
    <string name="dialog_add_title_hint">Enter Title</string>
    <string name="dialog_add_descr_hint">Enter Description</string>
    <string name="dialog_add_button">Add</string>
    <string name="dialog_add_tv_error_text">Error: input texts must be &gt; 3 symbols</string>
    <string name="dialog_add_userinfo_error">Error: could not get user data</string>

    <!-- Chat -->
    <string name="chat_fragment_set_title">Chat-</string>
    <string name="chat_progress_title">Loading... </string>
    <string name="chat_progress_message">...list of messages</string>
    <string name="chat_toast_id">Message id (from DB) = </string>
    <string name="chat_send_message_edittext_hint">Start typing!</string>
    <string name="chat_send_message_button">Send!</string>

    <!-- About -->
    <string name="about_logo_descr">Y.P. logo for this app</string>
    <string name="button_go">Start transition!</string>

</resources>
