<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dialogs"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_dialogs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_about" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_exit"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_exit" />
    </group>
</menu>
